# fastDiverse

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Readme.md  benchmark.ipynb  diversity.cpp  main.cpp  main.py  mainTable.csv  reader.cpp  reader.h
.github/workflows/: docker.yml  make.yml  run.yml
include/: fileReader.h  monitor.h  mutex_wrapper.h  parallel_func.h  reader.h
src/: diversity.cpp  fileReader.cpp  mutex_wrapper.cpp  parallel_func.cpp
